[package]
name = "gbrs"
version = "0.1.0"
authors = ["Sam Peets <sampeets@outlook.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.32"
log = "0.4.27"
anyhow = "1.0.99"
rfd = "0.15.4"
num-traits = "0.2.19"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
poll-promise = { version = "0.3.0", features = ["smol", "smol_tick_poll"] }
cpal = "0.16.0"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
poll-promise = { version = "0.3.0", features = ["web"] }
cpal = { version = "0.16.0", features = ["wasm-bindgen"] }
eframe = { version = "0.32", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
